// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiKeyboardAccessible adds accessibility attributes tabindex and role 1`] = `
<div
  role="button"
  tabindex="0"
/>
`;

exports[`OuiKeyboardAccessible doesn't override pre-existing accessibility attributes role 1`] = `
<div
  role="button"
  tabindex="0"
/>
`;

exports[`OuiKeyboardAccessible doesn't override pre-existing accessibility attributes tabindex 1`] = `
<div
  role="button"
  tabindex="1"
/>
`;
